# boilerplate

./: README.md
django/: .env.example  .gitignore  .pre-commit-config.yaml  README.md  manage.py  pyproject.toml
django/accounts/: admin.py  emails.py  models.py  serializers.py  urls.py  views.py
django/accounts/migrations/: 0001_initial.py  0002_user_updated_at.py
django/notifications/: __init__.py  consumers.py  manager.py  routing.py
django/project/: asgi.py  settings.py  urls.py  wsgi.py
django/teams/: __init__.py  apps.py  models.py  serializers.py  urls.py  views.py
django/teams/migrations/: 0001_initial.py
fastapi/: .env.example  .gitignore  README.md  alembic.ini  main.py  pyproject.toml
fastapi/alembic/: env.py
fastapi/alembic/versions/: cb03071aaae2_user_table.py
fastapi/app/core/: config.py  database.py  dependency.py
fastapi/app/models/: __init__.py  entity.py  team.py  user.py  verification.py
fastapi/app/notifications/: __init__.py  manager.py
fastapi/app/routes/: __init__.py  auth.py  entity.py  notifications.py  team.py
fastapi/app/schemas/: __init__.py  team.py  user.py
fastapi/app/services/: __init__.py  email.py  user.py
fastapi/app/templates/email/: password_reset.html  verify_email.html
fastapi/tests/: conftest.py  test_email_service.py  test_user_service.py
nextjs/: .env.example  .gitignore  README.md  eslint.config.mjs  next.config.ts  package.json  tsconfig.json
react/: README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
vue/: .env.example  .gitignore  README.md  eslint.config.mjs  index.html  package-lock.json  package.json  (+2 more)
(+63 files in other folders)
