[tool.poetry]
name = "fastapi-boilerplate"
version = "0.1.0"
description = ""
authors = ["Abdullah <mabdullah.tahirk@gmail.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.120.2"
uvicorn = { extras = ["standard"], version = "^0.38.0" }
sqlalchemy = "^2.0.23"
asyncpg = "^0.30.0"
alembic = "^1.17.1"
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
bcrypt = "^5.0.0"
psycopg = "^3.0.10"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
python-dotenv = "^1.0.1"
email-validator = "^2.1.0.post1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.5"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
